--- a/Day1-2/1. Python Basics.ipynb
+++ b/Day1-2/1. Python Basics.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "<br/><br/>\n",
     "\n",
-    "<center><a style=\"font-size: 40pt; font-weight: bold\">Chap. 1 - The Basics </a></center> \n",
+    "<center><a style=\"font-size: 40pt; font-weight: bold\">Chap. 1 - Python Basics </a></center> \n",
     "\n",
     "<br/><br/>\n",
     "\n"
