--- a/Day1-2/2. NumPy Basics.ipynb
+++ b/Day1-2/2. NumPy Basics.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "<br/><br/>\n",
+    "\n",
+    "<center><a style=\"font-size: 40pt; font-weight: bold\">Chap. 2 - Numpy Basics </a></center> \n",
+    "\n",
+    "<br/><br/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "NumPy enables fast computation in Python, the underlying implementation is in C hence it's blazing fast. The Key feature of NumPy is the `ndarray` object. The data type should be homogenous, that is the array should contain elements of single data type.  "
    ]
   },
