--- a/Day1-2/3-0 Pandas.ipynb
+++ b/Day1-2/3-0 Pandas.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "<br/><br/>\n",
+    "\n",
+    "<center><a style=\"font-size: 40pt; font-weight: bold\">Chap. 3 - Pandas Basics </a></center> \n",
+    "\n",
+    "<br/><br/>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
